# wifi_loc_ros2

./: README.md  README_ch.md  README_en.md  setup.cfg
analysis_results/: error_statistics.csv
data/: 21rss.p  22rss.p  24rss.p  25rss.p  28rss.p  30rss.p  32rss.p  33rss.p  35rss.p  37rss.p  38rss.p  39rss.p  (+25 more)
wifi_loc/: package.xml  robot_loc.py  robot_loc_new.py  robot_loc_ros1_new.py  setup.py
wifi_loc/data/: 04-15-22-03rss.p  06-17-22-20poses.p  06-18-15-47poses.p  10-25-18-32odom.p  10-28-23-05poses.p  10rss.p  11rss.p  12rss.p  13rss.p  14rss.p  15rss.p  16rss.p  17rss.p  18rss.p  19rss.p  20rss.p  21rss.p  23rss.p  25rss.p  26rss.p  27rss.p  28rss.p  29rss.p  3-11-23-55rss.p  3-12-14-36poses.p  30rss.p  31rss.p  33rss.p  34rss.p  36rss.p  37rss.p  38rss.p  39rss.p  40rss.p  42rss.p  43rss.p  46rss.p  47rss.p  48rss.p  4rss.p  (+35 more)
wifi_loc/data/documents-export-2024-07-18/: 9rss.p
wifi_loc/data/documents-export-2024-11-20/: 50rss.p  56rss.p  57rss.p  58rss.p  61rss.p  63rss.p  67rss.p  68rss.p
wifi_loc/data/documents-export-2024-11-21/: 72rss.p  78rss.p  79rss.p  80rss.p  82rss.p  83rss.p  84rss.p
wifi_loc/data/documents-export-2024-11-26/: 87rss.p  88rss.p  92rss.p
wifi_loc/launch/: robot_loc_with_bag.launch.py
wifi_loc/map/: shanghaitech_d2_1_2F_3F.osm
wifi_loc/utils/: Xmlparser.py  opter.py  read_pickle.py  util.py
wifi_loc/wifi_loc/: robot_loc.py
wifi_loc/wifi_loc/utils/: Xmlparser.py  pickle_compat.py  read_pickle.py  util.py
wifi_loc/wifi_loc/utils/rss/: __init__.py
wifi_loc/wifi_loc/utils/rss/msg/: _RssData.py  _RssDatum.py  __init__.py
(+109 files in other folders)
